tests/errors/backend/unknown_domain.fpcore
(FPCore (x)
 :calyx-impl (lut 64)
 (sin x))
